# TIL

./: .env  alembic.ini  app.py  config.py  containers.py  database.py  main.py  pyproject.toml
common/: auth.py  context_vars.py  logger.py  middlewares.py
migrations/: env.py
migrations/versions/: 2025_06_23_2344-55930352dcb5_add_user_table.py  2025_06_28_1354-171deda8dfb8_user_add_memo.py  2025_06_29_1622-69933fa64382_add_note_tag.py
note/application/: note_service.py
note/domain/: note.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controller/: note_controller.py
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/domain/repository/application/: user_service.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controller/: user_controller.py
utils/: crypto.py  db_utils.py
